--- a/portfolio/others/index.html
+++ b/portfolio/others/index.html
@@ -166,6 +166,13 @@
   <a href="interactive-dashboard.html" class="btn">View Project</a>
 </div>
 
+    <!-- 12. Mobile App Micro-Interactions -->
+<div class="exercise-card">
+  <h3>12. Mobile App Micro-Interactions</h3>
+  <p>Create engaging and subtle animations that enhance user experience and guide users through mobile app actions effectively.</p>
+  <a href="others/mobile-micro-interactions.html" class="btn">View Project</a>
+</div>
+    
   </section>
   
 
