--- a/portfolio/others/index.html
+++ b/portfolio/others/index.html
@@ -172,6 +172,62 @@
   <p>Create engaging and subtle animations that enhance user experience and guide users through mobile app actions effectively.</p>
   <a href="mobile-micro-interactions.html" class="btn">View Project</a>
 </div>
+
+    <!-- 13. Mobile Micro-Interactions – UX Enhancements -->
+<div class="exercise-card">
+  <h3>13. Mobile Micro-Interactions – UX Enhancements</h3>
+  <p>Design and analyze small-scale mobile interactions that enhance user experience and delight users in subtle ways.</p>
+  <a href="mobile-micro-interactions.html" class="btn">View Project</a>
+</div>
+
+<!-- 14. Gamified Onboarding – UX Strategy -->
+<div class="exercise-card">
+  <h3>14. Gamified Onboarding – UX Strategy</h3>
+  <p>Create engaging onboarding flows that combine gamification, motivation, and smooth UX to retain new users.</p>
+  <a href="gamified-onboarding.html" class="btn">View Project</a>
+</div>
+
+<!-- 15. E-commerce Checkout Optimization -->
+<div class="exercise-card">
+  <h3>15. E-commerce Checkout Optimization</h3>
+  <p>Analyze and improve checkout flows for online stores to reduce friction and maximize conversion rates.</p>
+  <a href="checkout-optimization.html" class="btn">View Project</a>
+</div>
+
+<!-- 16. Accessibility Audit – UX Compliance -->
+<div class="exercise-card">
+  <h3>16. Accessibility Audit – UX Compliance</h3>
+  <p>Conduct accessibility reviews and make UX adjustments to ensure inclusive digital experiences.</p>
+  <a href="accessibility-audit.html" class="btn">View Project</a>
+</div>
+
+<!-- 17. SaaS Dashboard Analytics – Data UX -->
+<div class="exercise-card">
+  <h3>17. SaaS Dashboard Analytics – Data UX</h3>
+  <p>Design interactive dashboards that visualize key metrics and improve user decision-making.</p>
+  <a href="saas-dashboard-analytics.html" class="btn">View Project</a>
+</div>
+
+<!-- 18. Voice Interaction UX – Smart Devices -->
+<div class="exercise-card">
+  <h3>18. Voice Interaction UX – Smart Devices</h3>
+  <p>Explore voice-based interactions, commands, and feedback loops for smart device applications.</p>
+  <a href="voice-interaction-ux.html" class="btn">View Project</a>
+</div>
+
+<!-- 19. Personalized Content Recommendations – UX AI -->
+<div class="exercise-card">
+  <h3>19. Personalized Content Recommendations – UX AI</h3>
+  <p>Design AI-driven recommendation systems to provide personalized experiences and increase engagement.</p>
+  <a href="personalized-content.html" class="btn">View Project</a>
+</div>
+
+<!-- 20. Progressive Web App – UX Optimization -->
+<div class="exercise-card">
+  <h3>20. Progressive Web App – UX Optimization</h3>
+  <p>Design fast, responsive PWAs that deliver app-like experiences with offline capabilities and smooth UX.</p>
+  <a href="progressive-web-app.html" class="btn">View Project</a>
+</div>
     
   </section>
   
