--- a/portfolio/others/index.html
+++ b/portfolio/others/index.html
@@ -228,7 +228,13 @@
   <p>Design fast, responsive PWAs that deliver app-like experiences with offline capabilities and smooth UX.</p>
   <a href="progressive-web-app.html" class="btn">View Project</a>
 </div>
-    
+
+    <!-- 21. Advanced Interaction Design – Mobile App -->
+<div class="exercise-card">
+  <h3>21. Advanced Interaction Design – Mobile App</h3>
+  <p>Explore advanced interaction patterns for mobile apps, including gestures, transitions, and intuitive micro-interactions to improve usability and delight users.</p>
+  <a href="advanced-interaction.html" class="btn">View Project</a>
+</div>
   </section>
   
 
