--- a/portfolio/others/index.html
+++ b/portfolio/others/index.html
@@ -235,6 +235,14 @@
   <p>Explore advanced interaction patterns for mobile apps, including gestures, transitions, and intuitive micro-interactions to improve usability and delight users.</p>
   <a href="advanced-interaction.html" class="btn">View Project</a>
 </div>
+
+    <!-- 22. UX Case Study – Real-World Redesign -->
+<div class="exercise-card">
+  <h3>22. UX Case Study – Real-World Redesign</h3>
+  <p>Redesign an existing app or website to solve real usability problems using research-driven UX strategies and visual improvements.</p>
+  <a href="ux-case-study.html" class="btn">View Project</a>
+</div>
+    
   </section>
   
 
