--- a/portfolio/others/index.html
+++ b/portfolio/others/index.html
@@ -242,7 +242,12 @@
   <p>Redesign an existing app or website to solve real usability problems using research-driven UX strategies and visual improvements.</p>
   <a href="ux-case-study.html" class="btn">View Project</a>
 </div>
-    
+    <!-- 23. Accessibility-Driven Redesign – Inclusive UX Project -->
+<div class="exercise-card">
+  <h3>23. Accessibility-Driven Redesign – Inclusive UX Project</h3>
+  <p>Redesigning a digital product with accessibility-first UX — improving usability for everyone, including users with disabilities.</p>
+  <a href="accessibility-redesign.html" class="btn">View Project</a>
+</div>
   </section>
   
 
