--- a/contact-me/index.html
+++ b/contact-me/index.html
@@ -6,97 +6,182 @@
   <title>Contact Me - Ismail Abdullahi Idris</title>
   <style>
     body {
-      font-family: 'Arial', sans-serif;
-      background: linear-gradient(to right, #1e3c72, #2a5298);
+      font-family: 'Poppins', sans-serif;
+      background: linear-gradient(to right, #0f2027, #203a43, #2c5364);
       color: #fff;
       margin: 0;
       padding: 0;
     }
+
     header {
       text-align: center;
-      padding: 50px 20px 20px 20px;
+      padding: 80px 20px 30px 20px;
     }
+
     header h1 {
-      font-size: 2.2em;
+      font-size: 2.6em;
       margin: 0;
-    }
-    header p {
-      font-size: 1.1em;
-      margin: 8px 0 0 0;
-      color: #cce0ff;
-    }
-    section {
-      max-width: 600px;
-      margin: 50px auto;
-      padding: 30px;
-      background: rgba(255, 255, 255, 0.05);
-      border-radius: 16px;
-      box-shadow: 0 8px 30px rgba(0,0,0,0.4);
-    }
-    h2 {
-      text-align: center;
-      margin-bottom: 25px;
+      letter-spacing: 1px;
       color: #ffcc00;
     }
+
+    header p {
+      font-size: 1.15em;
+      color: #d1e0ff;
+      margin-top: 12px;
+      max-width: 600px;
+      margin-left: auto;
+      margin-right: auto;
+      line-height: 1.7;
+    }
+
+    section {
+      max-width: 650px;
+      margin: 60px auto;
+      padding: 40px 30px;
+      background: rgba(255, 255, 255, 0.07);
+      border-radius: 18px;
+      box-shadow: 0 10px 40px rgba(0,0,0,0.5);
+    }
+
+    h2 {
+      text-align: center;
+      color: #ffcc00;
+      margin-bottom: 25px;
+      font-size: 1.7em;
+    }
+
     ul {
       list-style: none;
       padding: 0;
       font-size: 1.1em;
-      line-height: 1.8;
+      line-height: 1.9;
     }
+
+    ul li {
+      margin-bottom: 10px;
+    }
+
     ul li span {
       font-weight: bold;
       color: #ffd633;
     }
-    p.message {
-      margin-top: 25px;
-      font-size: 1em;
-      color: #cce0ff;
-      line-height: 1.6;
-      text-align: center;
-    }
-    footer {
-      text-align: center;
-      padding: 20px;
-      font-size: 0.9em;
-      color: #ccc;
-    }
+
     a {
       color: #ffcc00;
       text-decoration: none;
     }
+
     a:hover {
       text-decoration: underline;
+    }
+
+    p.message {
+      margin-top: 35px;
+      font-size: 1em;
+      color: #cce0ff;
+      line-height: 1.7;
+      text-align: center;
+    }
+
+    /* Contact Form */
+    form {
+      display: flex;
+      flex-direction: column;
+      gap: 15px;
+      margin-top: 30px;
+    }
+
+    input, textarea {
+      padding: 14px;
+      border-radius: 8px;
+      border: none;
+      outline: none;
+      background: rgba(255, 255, 255, 0.1);
+      color: #fff;
+      font-size: 1em;
+    }
+
+    input::placeholder, textarea::placeholder {
+      color: #ccc;
+    }
+
+    textarea {
+      resize: none;
+      min-height: 120px;
+    }
+
+    button {
+      background: #ffcc00;
+      color: #1a1a1a;
+      border: none;
+      padding: 14px;
+      font-size: 1em;
+      border-radius: 8px;
+      cursor: pointer;
+      transition: all 0.3s ease;
+      font-weight: bold;
+    }
+
+    button:hover {
+      background: #ffd633;
+      transform: scale(1.02);
+    }
+
+    footer {
+      text-align: center;
+      padding: 30px;
+      font-size: 0.9em;
+      color: #ccc;
     }
   </style>
 </head>
 <body>
   <header>
-    <h1>Contact Me</h1>
-    <p>Get in touch with Ismail Abdullahi Idris</p>
+    <h1>Let’s Build Something Meaningful Together</h1>
+    <p>
+      Whether you have a project in mind, need creative support, or just want to say hello — 
+      I’d love to connect and turn your ideas into impact.
+    </p>
   </header>
 
   <section>
     <h2>Contact Information</h2>
     <ul>
-      <li><span>Phone:</span> <a href="tel:+2348144683329">08144683329</a></li>
-      <li><span>Email:</span> <a href="mailto:ismailjalam@gmail.com">ismailjalam@gmail.com</a></li>
-      <li><span>Location:</span> Dambam, Bauchi State</li>
-      <li><span>Social Media:</span>
+      <li><span>📞 Phone:</span> <a href="tel:+2348144683329">08144683329</a></li>
+      <li><span>📧 Email:</span> <a href="mailto:ismailjalam@gmail.com">ismailjalam@gmail.com</a></li>
+      <li><span>📍 Location:</span> Dambam, Bauchi State, Nigeria</li>
+      <li><span>🌐 Social Media:</span>
         <ul>
-          <li><a href="#">Instagram</a></li>
+          <li><a href="#">Instagram</a> | <a href="#">LinkedIn</a> | <a href="#">Twitter</a></li>
         </ul>
       </li>
     </ul>
 
     <p class="message">
-      If any of my work catches your interest or you want something similar created, 
-      feel free to reach out. I am happy to bring your ideas to life and craft projects tailored to your needs.
+      I’m always open to new collaborations, creative ideas, or opportunities to help brands grow. 
+      Don’t hesitate — let’s make something outstanding together.
     </p>
+
+    <!-- Contact Form -->
+    <form onsubmit="sendMessage(event)">
+      <input type="text" id="name" placeholder="Your Name" required>
+      <input type="email" id="email" placeholder="Your Email" required>
+      <textarea id="message" placeholder="Your Message..." required></textarea>
+      <button type="submit">Send Message</button>
+    </form>
   </section>
 
   <footer>
-    © 2025 Ismail Abdullahi Idris
+    © 2025 Ismail Abdullahi Idris — All Rights Reserved.
   </footer>
+
+  <script>
+    function sendMessage(event) {
+      event.preventDefault();
+      alert('Thank you for your message! I will get back to you soon.');
+      event.target.reset();
+    }
+  </script>
 </body>
 </html>
