--- a/contact-me/index.html
+++ b/contact-me/index.html
@@ -1,224 +1,187 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Contact Me - Ismail Abdullahi Idris</title>
-  <style>
-    body {
-      font-family: 'Poppins', sans-serif;
-      background: linear-gradient(to right, #0f2027, #203a43, #2c5364);
-      color: #fff;
-      margin: 0;
-      padding: 0;
-    }
-
-    header {
-      text-align: center;
-      padding: 80px 20px 30px 20px;
-    }
-
-    header h1 {
-      font-size: 2.6em;
-      margin: 0;
-      letter-spacing: 1px;
-      color: #ffcc00;
-    }
-
-    header p {
-      font-size: 1.15em;
-      color: #d1e0ff;
-      margin-top: 12px;
-      max-width: 600px;
-      margin-left: auto;
-      margin-right: auto;
-      line-height: 1.7;
-    }
-
-    section {
-      max-width: 650px;
-      margin: 60px auto;
-      padding: 40px 30px;
-      background: rgba(255, 255, 255, 0.07);
-      border-radius: 18px;
-      box-shadow: 0 10px 40px rgba(0,0,0,0.5);
-    }
-
-    h2 {
-      text-align: center;
-      color: #ffcc00;
-      margin-bottom: 25px;
-      font-size: 1.7em;
-    }
-
-    ul {
-      list-style: none;
-      padding: 0;
-      font-size: 1.1em;
-      line-height: 1.9;
-    }
-
-    ul li {
-      margin-bottom: 10px;
-    }
-
-    ul li span {
-      font-weight: bold;
-      color: #ffd633;
-    }
-
-    a {
-      color: #ffcc00;
-      text-decoration: none;
-    }
-
-    a:hover {
-      text-decoration: underline;
-    }
-
-    p.message {
-      margin-top: 35px;
-      font-size: 1em;
-      color: #cce0ff;
-      line-height: 1.7;
-      text-align: center;
-    }
-
-    /* Contact Form */
-    form {
-      display: flex;
-      flex-direction: column;
-      gap: 15px;
-      margin-top: 30px;
-    }
-
-    input, textarea {
-      padding: 14px;
-      border-radius: 8px;
-      border: none;
-      outline: none;
-      background: rgba(255, 255, 255, 0.1);
-      color: #fff;
-      font-size: 1em;
-    }
-
-    input::placeholder, textarea::placeholder {
-      color: #ccc;
-    }
-
-    textarea {
-      resize: none;
-      min-height: 120px;
-    }
-
-    button {
-      background: #ffcc00;
-      color: #1a1a1a;
-      border: none;
-      padding: 14px;
-      font-size: 1em;
-      border-radius: 8px;
-      cursor: pointer;
-      transition: all 0.3s ease;
-      font-weight: bold;
-    }
-
-    button:hover {
-      background: #ffd633;
-      transform: scale(1.02);
-    }
-
-    footer {
-      text-align: center;
-      padding: 30px;
-      font-size: 0.9em;
-      color: #ccc;
-    }
-  </style>
+<meta charset="UTF-8">
+<meta name="viewport" content="width=device-width, initial-scale=1.0">
+<title>Contact Me - Ismail Abdullahi Idris</title>
+<style>
+  body {
+    font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+    background: linear-gradient(135deg, #1e3c72, #2a5298);
+    color: #f0f4f8;
+    margin: 0;
+    padding: 0;
+    min-height: 100vh;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+  }
+  header {
+    text-align: center;
+    padding: 50px 20px 20px 20px;
+  }
+  header h1 {
+    font-size: 2.2em;
+    margin: 0;
+    color: #ffd700;
+    text-shadow: 0 2px 6px rgba(0,0,0,0.5);
+  }
+  header p {
+    font-size: 1.1em;
+    margin: 8px 0 0 0;
+    color: #cce0ff;
+  }
+  section {
+    max-width: 700px;
+    margin: 30px auto;
+    padding: 40px;
+    background: rgba(255,255,255,0.05);
+    border-radius: 16px;
+    box-shadow: 0 8px 30px rgba(0,0,0,0.4);
+    width: 90%;
+  }
+  h2 {
+    text-align: center;
+    margin-bottom: 25px;
+    color: #ffcc00;
+  }
+  input, textarea {
+    width: 100%;
+    padding: 14px;
+    margin: 12px 0;
+    border: none;
+    border-radius: 10px;
+    font-size: 1em;
+  }
+  textarea { height: 120px; resize: none; }
+  button {
+    background-color: #ffd700;
+    color: #1a1a1a;
+    font-weight: 700;
+    border: none;
+    padding: 14px 24px;
+    border-radius: 12px;
+    cursor: pointer;
+    transition: all 0.3s ease;
+    font-size: 1.1em;
+  }
+  button:hover { background-color: #ffea75; transform: scale(1.05); }
+  .success { color: #90ee90; margin-top: 15px; font-weight: 600; display: none; text-align:center;}
+  #commentsContainer {
+    margin-top: 40px;
+    display: flex;
+    flex-direction: column;
+    gap: 15px;
+  }
+  #commentsContainer div {
+    background: rgba(255,255,255,0.1);
+    padding: 15px;
+    border-radius: 12px;
+  }
+  #commentsContainer div strong { color: #ffd700; }
+  footer {
+    text-align: center;
+    padding: 20px;
+    font-size: 0.9em;
+    color: #ccc;
+    margin-top: auto;
+  }
+  a.back-home {
+    display: inline-block;
+    margin-top: 25px;
+    color: #ffd700;
+    text-decoration: none;
+    font-weight: bold;
+  }
+  a.back-home:hover { text-decoration: underline; }
+  @media(max-width:600px){
+    section { padding: 25px; }
+    button { width: 100%; }
+  }
+</style>
 </head>
 <body>
-  <header>
-    <h1>Let’s Build Something Meaningful Together</h1>
-    <p>
-      Whether you have a project in mind, need creative support, or just want to say hello — 
-      I’d love to connect and turn your ideas into impact.
-    </p>
-  </header>
 
-  <section>
-    <h2>Contact Information</h2>
-    <ul>
-      <li><span>📞 Phone:</span> <a href="tel:+2348144683329">08144683329</a></li>
-      <li><span>📧 Email:</span> <a href="mailto:ismailjalam@gmail.com">ismailjalam@gmail.com</a></li>
-      <li><span>📍 Location:</span> Dambam, Bauchi State, Nigeria</li>
-      <li><span>🌐 Social Media:</span>
-        <ul>
-          <li><a href="#">Instagram</a> | <a href="#">LinkedIn</a> | <a href="#">Twitter</a></li>
-        </ul>
-      </li>
-    </ul>
+<header>
+  <h1>Contact Me</h1>
+  <p>Get in touch with Ismail Abdullahi Idris</p>
+</header>
 
-    <p class="message">
-      I’m always open to new collaborations, creative ideas, or opportunities to help brands grow. 
-      Don’t hesitate — let’s make something outstanding together.
-    </p>
+<section>
+  <h2>Contact Form</h2>
+  <form id="contactForm">
+    <input type="text" name="name" placeholder="Your Name" required />
+    <textarea name="message" placeholder="Your Comment" required></textarea>
+    <button type="submit">Send</button>
+    <p class="success" id="successMsg">Thanks! Your comment has been sent ✅</p>
+  </form>
 
-    <!-- Firebase Comments Form -->
-<form id="contactForm">
-  <input type="text" id="name" placeholder="Your Name" required />
-  <input type="email" id="email" placeholder="Your Email" required />
-  <textarea id="message" placeholder="Your Comment" required></textarea>
-  <button type="submit">Send</button>
-  <p class="success" style="display:none;">Thanks! Your comment has been sent ✅</p>
-</form>
+  <h2>Previous Comments</h2>
+  <div id="commentsContainer"></div>
+</section>
 
-<script src="https://www.gstatic.com/firebasejs/9.23.0/firebase-app-compat.js"></script>
-<script src="https://www.gstatic.com/firebasejs/9.23.0/firebase-database-compat.js"></script>
+<a href="../index.html" class="back-home">← Back to Home</a>
+
+<footer>
+  © 2025 Ismail Abdullahi Idris
+</footer>
+
+<!-- Firebase -->
+<script src="https://www.gstatic.com/firebasejs/10.6.1/firebase-app.js"></script>
+<script src="https://www.gstatic.com/firebasejs/10.6.1/firebase-firestore.js"></script>
 
 <script>
-  // Initialize Firebase
+  // Replace with your Firebase config
   const firebaseConfig = {
     apiKey: "YOUR_API_KEY",
-    authDomain: "YOUR_AUTH_DOMAIN",
-    databaseURL: "YOUR_DATABASE_URL",
+    authDomain: "YOUR_PROJECT_ID.firebaseapp.com",
     projectId: "YOUR_PROJECT_ID",
-    storageBucket: "YOUR_STORAGE_BUCKET",
+    storageBucket: "YOUR_PROJECT_ID.appspot.com",
     messagingSenderId: "YOUR_SENDER_ID",
     appId: "YOUR_APP_ID"
   };
+
   firebase.initializeApp(firebaseConfig);
-  const db = firebase.database().ref("comments");
+  const db = firebase.firestore();
 
   const form = document.getElementById("contactForm");
-  const successMsg = document.querySelector(".success");
+  const successMsg = document.getElementById("successMsg");
+  const commentsContainer = document.getElementById("commentsContainer");
 
-  form.addEventListener("submit", (e) => {
+  // Submit comment
+  form.addEventListener("submit", async (e) => {
     e.preventDefault();
-    const name = document.getElementById("name").value;
-    const email = document.getElementById("email").value;
-    const message = document.getElementById("message").value;
+    const name = form.name.value.trim();
+    const message = form.message.value.trim();
+    if(!name || !message) return;
 
-    db.push({ name, email, message })
-      .then(() => {
-        successMsg.style.display = "block";
-        form.reset();
-        setTimeout(() => successMsg.style.display = "none", 5000);
-      })
-      .catch((err) => alert("Error: " + err));
-  });
-</script>
-  </section>
-
-  <footer>
-    © 2025 Ismail Abdullahi Idris — All Rights Reserved.
-  </footer>
-
-  <script>
-    function sendMessage(event) {
-      event.preventDefault();
-      alert('Thank you for your message! I will get back to you soon.');
-      event.target.reset();
+    try {
+      await db.collection("comments").add({
+        name,
+        message,
+        timestamp: firebase.firestore.FieldValue.serverTimestamp()
+      });
+      successMsg.style.display = "block";
+      form.reset();
+      setTimeout(()=>{ successMsg.style.display = "none"; }, 5000);
+    } catch(err) {
+      alert("Error: " + err.message);
     }
-  </script>
+  });
+
+  // Real-time comments display
+  db.collection("comments")
+    .orderBy("timestamp","desc")
+    .onSnapshot(snapshot => {
+      commentsContainer.innerHTML = "";
+      snapshot.forEach(doc => {
+        const data = doc.data();
+        const div = document.createElement("div");
+        div.innerHTML = `<strong>${data.name}</strong><p>${data.message}</p>`;
+        commentsContainer.appendChild(div);
+      });
+    });
+</script>
+
 </body>
 </html>
