--- a/contact-me/index.html
+++ b/contact-me/index.html
@@ -21,71 +21,59 @@
     padding: 50px 20px 20px 20px;
   }
   header h1 {
-    font-size: 2.2em;
+    font-size: 2.5em;
     margin: 0;
     color: #ffd700;
     text-shadow: 0 2px 6px rgba(0,0,0,0.5);
   }
   header p {
-    font-size: 1.1em;
-    margin: 8px 0 0 0;
+    font-size: 1.2em;
+    margin: 10px 0 20px 0;
     color: #cce0ff;
+  }
+  .contact-info {
+    text-align: center;
+    margin-bottom: 30px;
+    font-size: 1.1em;
+  }
+  .contact-info a {
+    color: #ffd700;
+    text-decoration: none;
   }
   section {
     max-width: 700px;
-    margin: 30px auto;
+    margin: 0 auto 40px auto;
     padding: 40px;
     background: rgba(255,255,255,0.05);
     border-radius: 16px;
     box-shadow: 0 8px 30px rgba(0,0,0,0.4);
     width: 90%;
-  }
-  h2 {
     text-align: center;
-    margin-bottom: 25px;
-    color: #ffcc00;
   }
   input, textarea {
     width: 100%;
-    padding: 14px;
-    margin: 12px 0;
+    padding: 12px;
+    margin: 10px 0;
     border: none;
-    border-radius: 10px;
+    border-radius: 8px;
     font-size: 1em;
   }
-  textarea { height: 120px; resize: none; }
+  textarea { height: 100px; resize: none; }
   button {
     background-color: #ffd700;
     color: #1a1a1a;
     font-weight: 700;
     border: none;
-    padding: 14px 24px;
-    border-radius: 12px;
+    padding: 12px 20px;
+    border-radius: 10px;
     cursor: pointer;
     transition: all 0.3s ease;
-    font-size: 1.1em;
   }
-  button:hover { background-color: #ffea75; transform: scale(1.05); }
-  .success { color: #90ee90; margin-top: 15px; font-weight: 600; display: none; text-align:center;}
-  #commentsContainer {
-    margin-top: 40px;
-    display: flex;
-    flex-direction: column;
-    gap: 15px;
+  button:hover {
+    background-color: #ffea75;
+    transform: scale(1.05);
   }
-  #commentsContainer div {
-    background: rgba(255,255,255,0.1);
-    padding: 15px;
-    border-radius: 12px;
-  }
-  #commentsContainer div strong { color: #ffd700; }
-  footer {
-    text-align: center;
-    padding: 20px;
-    font-size: 0.9em;
-    color: #ccc;
-    margin-top: auto;
-  }
+  .success { color: #90ee90; margin-top: 15px; font-weight: 600; display: none; }
   a.back-home {
     display: inline-block;
     margin-top: 25px;
@@ -94,30 +82,31 @@
     font-weight: bold;
   }
   a.back-home:hover { text-decoration: underline; }
-  @media(max-width:600px){
-    section { padding: 25px; }
-    button { width: 100%; }
-  }
 </style>
+
+<!-- Firebase SDK -->
+<script src="https://www.gstatic.com/firebasejs/9.23.0/firebase-app-compat.js"></script>
+<script src="https://www.gstatic.com/firebasejs/9.23.0/firebase-database-compat.js"></script>
 </head>
 <body>
 
 <header>
-  <h1>Contact Me</h1>
-  <p>Get in touch with Ismail Abdullahi Idris</p>
+  <h1>Let’s Build Something Together</h1>
+  <p>Reach out via email, phone, or leave a comment below!</p>
 </header>
 
+<div class="contact-info">
+  <p>Email: <a href="mailto:ismailjalam@gmail.com">ismailjalam@gmail.com</a></p>
+  <p>Phone: <a href="tel:+2348144683329">08144683329</a></p>
+</div>
+
 <section>
-  <h2>Contact Form</h2>
   <form id="contactForm">
     <input type="text" name="name" placeholder="Your Name" required />
     <textarea name="message" placeholder="Your Comment" required></textarea>
-    <button type="submit">Send</button>
-    <p class="success" id="successMsg">Thanks! Your comment has been sent ✅</p>
+    <button type="submit">Send Comment</button>
+    <p class="success">Thanks! Your comment has been sent ✅</p>
   </form>
-
-  <h2>Previous Comments</h2>
-  <div id="commentsContainer"></div>
 </section>
 
 <a href="../index.html" class="back-home">← Back to Home</a>
@@ -126,15 +115,12 @@
   © 2025 Ismail Abdullahi Idris
 </footer>
 
-<!-- Firebase -->
-<script src="https://www.gstatic.com/firebasejs/10.6.1/firebase-app.js"></script>
-<script src="https://www.gstatic.com/firebasejs/10.6.1/firebase-firestore.js"></script>
-
 <script>
-  // Replace with your Firebase config
+  // Firebase config (replace with your own project settings)
   const firebaseConfig = {
     apiKey: "YOUR_API_KEY",
     authDomain: "YOUR_PROJECT_ID.firebaseapp.com",
+    databaseURL: "https://YOUR_PROJECT_ID-default-rtdb.firebaseio.com",
     projectId: "YOUR_PROJECT_ID",
     storageBucket: "YOUR_PROJECT_ID.appspot.com",
     messagingSenderId: "YOUR_SENDER_ID",
@@ -142,45 +128,26 @@
   };
 
   firebase.initializeApp(firebaseConfig);
-  const db = firebase.firestore();
+  const db = firebase.database();
 
-  const form = document.getElementById("contactForm");
-  const successMsg = document.getElementById("successMsg");
-  const commentsContainer = document.getElementById("commentsContainer");
+  const form = document.getElementById('contactForm');
+  const successMsg = document.querySelector('.success');
 
-  // Submit comment
-  form.addEventListener("submit", async (e) => {
+  form.addEventListener('submit', (e) => {
     e.preventDefault();
     const name = form.name.value.trim();
     const message = form.message.value.trim();
-    if(!name || !message) return;
-
-    try {
-      await db.collection("comments").add({
-        name,
-        message,
-        timestamp: firebase.firestore.FieldValue.serverTimestamp()
-      });
-      successMsg.style.display = "block";
-      form.reset();
-      setTimeout(()=>{ successMsg.style.display = "none"; }, 5000);
-    } catch(err) {
-      alert("Error: " + err.message);
+    if(name && message){
+      const newCommentRef = db.ref('comments').push();
+      newCommentRef.set({ name, message, timestamp: Date.now() })
+        .then(() => {
+          successMsg.style.display = 'block';
+          form.reset();
+          setTimeout(()=> successMsg.style.display='none', 4000);
+        })
+        .catch(err => alert(err));
     }
   });
-
-  // Real-time comments display
-  db.collection("comments")
-    .orderBy("timestamp","desc")
-    .onSnapshot(snapshot => {
-      commentsContainer.innerHTML = "";
-      snapshot.forEach(doc => {
-        const data = doc.data();
-        const div = document.createElement("div");
-        div.innerHTML = `<strong>${data.name}</strong><p>${data.message}</p>`;
-        commentsContainer.appendChild(div);
-      });
-    });
 </script>
 
 </body>
