--- a/contact me/index.html
+++ b/contact me/index.html
@@ -198,5 +198,50 @@
     });
   });
 </script>
+
+  <!-- Firebase SDK -->
+<script src="https://www.gstatic.com/firebasejs/9.23.0/firebase-app-compat.js"></script>
+<script src="https://www.gstatic.com/firebasejs/9.23.0/firebase-database-compat.js"></script>
+
+<script>
+  // Firebase config naka
+  const firebaseConfig = {
+    apiKey: "AIzaSyCqBs3z1sHmfoqO5-R6IH-epqbp9ypt9GE",
+    authDomain: "ismailjalam-a74e4.firebaseapp.com",
+    projectId: "ismailjalam-a74e4",
+    storageBucket: "ismailjalam-a74e4.firebasestorage.app",
+    messagingSenderId: "791455932737",
+    appId: "1:791455932737:web:452e30144d283124d541c0",
+    measurementId: "G-VCP1LJL56G"
+  };
+
+  // Initialize Firebase
+  const app = firebase.initializeApp(firebaseConfig);
+  const database = firebase.database();
+
+  // Handle form submission
+  const commentForm = document.getElementById('commentForm');
+  const successMsg = document.getElementById('successMsg');
+
+  commentForm.addEventListener('submit', (e) => {
+    e.preventDefault();
+    const name = document.getElementById('name').value;
+    const comment = document.getElementById('comment').value;
+
+    const newCommentRef = database.ref('comments').push();
+    newCommentRef.set({
+      name: name,
+      comment: comment,
+      timestamp: Date.now()
+    })
+    .then(() => {
+      successMsg.style.display = 'block';
+      commentForm.reset();
+    })
+    .catch((err) => {
+      alert('Error: ' + err.message);
+    });
+  });
+</script>
 </body>
 </html>
